added the products to the page. Service hanndling http request. Controller passing data to html view. added navigation, search and dropdown. search does not work, dropdown is populated but does not filter or remove duplicates.

--- a/src/productpage/productpage.html
+++ b/src/productpage/productpage.html
@@ -1,4 +1,12 @@
-<h1>Productpage</h1>
-
+<!-- navbar start -->
+<nav>
+  <div class="nav-wrapper blue darken-1">
+    <a href="#/" class="brand-logo">Purchase Items For Survival</a>
+    <ul id="nav-mobile" class="right hide-on-med-and-down">
+      <li><a href="#/">home</a></li>
+    </ul>
+  </div>
+</nav>
+<!-- navbar end -->
 
 <cd-items></cd-items>
